# DataForgeEngine

./: .gitmodules  CMakeLists.txt
examples/: DataForgeEngineTest.cc  DataForgeEngineWeb.cc  DataProcessorTest.cc  DatabaseManagerTest.cc  HttpPostGet.cc  JsonParserTest.cc  MqttClientTest.cc  SerialMonitor.cc  SerialPortTest.cc  WebInterfaceTest.cc
include/DataForge/: DataForgeEngine.h  DataProcessor.h  DatabaseManager.h  HttpClient.h  JsonParser.h  Logger.h  MqttClient.h  SerialPort.h  WebInterface.h
libs/: CMakeLists.txt
src/: DataForgeEngine.cc  DataProcessor.cc  DatabaseManager.cc  HttpClient.cc  JsonParser.cc  MqttClient.cc  SerialPort.cc  WebInterface.cc  main.cc
www/: datasend.html  example_steps.json
